# seesewfar

./: .gitignore  .gitmodules  CMakeLists.txt  credentials.json  get-data.py
src/: bspline.h  coord_convention.h  image_loading.h  main.cpp  peaks.h  star_map.h  star_shader.h  utils.h  vignette_histogram.h
src/shaders/: camera.glsl  prog_carree.glsl  prog_stack.glsl  spline.glsl
